new file:   Amrita-main.mp4 	new file:   Badminton.png 	new file:   Basket.png 	new file:   Cricket.png 	new file:   Foot.png 	modified:   Main Page.html 	new file:   Tennis.png 	new file:   Thank.html 	new file:   Volleyball.png 	new file:   about.html 	new file:   admission.html 	new file:   chess.png 	new file:   ground.html 	modified:   index.html 	modified:   main.css 	modified:   p1.css

--- a/main.css
+++ b/main.css
@@ -166,7 +166,10 @@ header {
   max-width: 500px;
   height: auto;
   border-radius: 10px;
+  transition: background-color 1.5s, color 0.4s, box-shadow 1.5s;
 }
+
+
 
 .text-content {
   max-width: 500px;
@@ -177,9 +180,7 @@ header {
   border-radius: 10px;
 }
 
-.text-content:hover {
-  transform: scale(1.05);
-}
+
 
 .text-content a {
   color: white;
@@ -188,6 +189,7 @@ header {
 
 .text-content a:hover {
   color: aliceblue;
+  transition: transform 0.5s ease-in-out;
 }
 
 .under {
