--- a/p1.css
+++ b/p1.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Cambria Math';
 }
 
 
@@ -55,8 +56,9 @@
 }
 
 button {
+    position: absolute;
     padding: 15px;
-    font-size: 27px;
+    font-size: 20px;
     font-weight: 500;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     letter-spacing: 2px;
@@ -66,6 +68,9 @@ button {
     border-radius: 10px;
     transition: background-color 1.5s, color 0.4s, box-shadow 1.5s;
     animation: glow 2s linear infinite alternate;
+    top: 85%;
+    height: auto;
+    right: 20px;
 }
 
 button:hover {
